  * Adding new TopologyAttrs with values defined always coerces this into
    a numpy array (Issue #1876)
  * Groups passed to select_atoms() are now type checked (Issue #1852)
  * Fixed inconsistent handling of groups with/without duplicates in
    pack_into_box() (Issue #1911)
  * Fixed format of MODEL number in PDB file writing (Issue #1950)
  * PDBWriter now properly sets start value

Changes
  * TopologyAttrs are now statically typed (Issue #1876)
  * updated meta data for new PyPi (#1837)
  * AtomGroup.atoms, ResidueGroup.residues, and SegmentGroup.segments now return
    themselves instead of a new object to increase performance (PR #1922)
  * *Group.unique now returns a new object only if the respective group contains
    duplicates. Otherwise, the group itself is returned. Repeated access of
    *Group.unique will always return the same object unless the group is
    updated or modified. (PR #1922)
  * The TPR parser reads SETTLE constraints as bonds. (Issue #1949)


04/15/18 tylerjereddy, richardjgowers, palnabarun, bieniekmateusz, kain88-de,
         orbeckst, xiki-tempula, navyakhare, zemanj, ayushsuhane, davidercruz,
         jbarnoud

  * 0.18.0

Enhancements
  * Added flatten_dict function that flattens nested dicts into shallow
    dicts with tuples as keys.
  * Can now pass multiple attributes as a list to groupby function.
    Eg ag.groupby(["masses","charges"])
    (Issue #1839)
  * Added reading of record types (ATOM/HETATM) for PDB, PDBQT and PQR formats
    (Issue #1753)
  * Added Universe.copy to allow creation of an independent copy of a Universe
    (Issue #1029)
  * Added copy method to various core classes including Reader, TransTable,
    Topology, TopologyAttr (Issue #1029)
  * Added `reindex` option to GROWriter to preserve original atom ids when set to
    False (Issue #1777)
  * Can now pass 'atom_style' keyword argument when parsing Lammps Data files
    to specify what is on each line.  Eg atom_style = 'id type charge x y z'